--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -9,5 +9,7 @@
 @import 'modules/_headline';
 @import 'modules/_row';
 @import 'modules/_generic-content-container';
+@import 'modules/_section-title';
+@import 'modules/_feature-item';
 
 /* order is important here as will get errors if variables used in base style sheet unless variables are called first */
