--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,6 +2,10 @@
 	@mixin clearfix {
 	}
 
+	&--t-padding {
+		padding-top: 80px;
+	}
+
 	/* this overrides the right padding below and cancels it out for the right most element in a row - should be used in conjunction with overflow: hidden on wrapper */
 	&--gutters {
 		margin-right: -65px;
@@ -11,6 +15,10 @@
 		margin-right: -100px;
 	}
 
+	&--gutters-small {
+		margin-right: -45px;
+	}
+
 	/* select direct children of parent */
 	&--gutters > div {
 		padding-right: 65px;
@@ -18,6 +26,10 @@
 
 	&--gutters-large > div {
 		padding-right: 100px;
+	}
+
+	&--gutters-small > div {
+		padding-right: 45px;
 	}
 
 	&__b-margin-until-medium {
@@ -50,6 +62,60 @@
 
 		&__medium-8--smaller {
 			width: 63%;
+		}
+	}
+
+	@mixin atLarge {
+		&__b-margin-until-large {
+			margin-bottom: 0;
+		}
+
+		&__large-4 {
+			float: left;
+			width: 33.33%;
+		}
+
+		&__large-4--larger {
+			width: 37%;
+		}
+
+		&__large-6 {
+			float: left;
+			width: 50%;
+		}
+
+		&__large-8 {
+			float: left;
+			width: 66.66%;
+		}
+
+		&__large-8--smaller {
+			width: 63%;
+		}
+	}
+
+	/* Begin equal height rules */
+	&--equal-height-at-medium {
+		@mixin atMedium {
+			display: flex;
+		}
+
+		/* select direct descendants of --equal-height-at-medium */
+		& > div {
+			float: none;
+			display: flex;
+		}
+	}
+
+	&--equal-height-at-large {
+		@mixin atLarge {
+			display: flex;
+		}
+
+		/* select direct descendants of --equal-height-at-medium */
+		& > div {
+			float: none;
+			display: flex;
 		}
 	}
 }
