--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,5 +11,6 @@
 @import 'modules/_generic-content-container';
 @import 'modules/_section-title';
 @import 'modules/_feature-item';
+@import 'modules/_testimonial';
 
 /* order is important here as will get errors if variables used in base style sheet unless variables are called first */
