--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,5 +12,6 @@
 @import 'modules/_section-title';
 @import 'modules/_feature-item';
 @import 'modules/_testimonial';
+@import 'modules/_site-footer';
 
 /* order is important here as will get errors if variables used in base style sheet unless variables are called first */
