--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,5 +13,7 @@
 @import 'modules/_feature-item';
 @import 'modules/_testimonial';
 @import 'modules/_site-footer';
+@import 'modules/_site-header';
+@import 'modules/_primary-nav';
 
 /* order is important here as will get errors if variables used in base style sheet unless variables are called first */
