--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -15,5 +15,6 @@
 @import 'modules/_site-footer';
 @import 'modules/_site-header';
 @import 'modules/_primary-nav';
+@import 'modules/_reveal-item';
 
 /* order is important here as will get errors if variables used in base style sheet unless variables are called first */
