--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
 	}
 
 	@mixin atMedium {
+		position: fixed;
 		background-color: rgba(47, 85, 114, .3);
+
+		&--dark {
+			background-color: rgba(23, 51, 72, .85);
+		}
 	}
 
 	&__btn-container {
@@ -27,11 +32,18 @@
 		padding: 13px 29px;
 		left: 50%;
 		transform: translateX(-50%);
+		transform-origin: 0 0;
+		transition: transform .3s ease-out;
 
 		@mixin atMedium {
 			left: auto;
 			transform: translateX(0);
 			padding: 25px 36px;
+
+			/*ampersand on the end targets __logo*/
+			.site-header--dark & {
+				transform: scale(0.55);
+			}
 		}
 	}
 
